--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html >
     <head>
-       <link href="C:\Users\shobh\Desktop\JavaScript\Flag\flag.css" rel="stylesheet">     
+       <link href="flag.css" rel="stylesheet">     
     </head>
     <body>
         <h1>THE FLAG OF INDIA</h1>
@@ -10,7 +10,7 @@
             <div class="rec2"></div>
             <div class="rec3"></div>                  
             <div class="circle">
-                <img src="C:\Users\shobh\Desktop\JavaScript\Flag\ashoka-chakra-7904695_1280.png">
+                <img src="ashoka-chakra-7904695_1280.png">
             </div>
         </div>
         
